<resources>
    <string name="app_name">Trippin</string>
    <string name="register_text">Not a tripper yet?</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_tripperName">TripperName</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_email_tripperName">Email or TripperName</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="register_question">Not registered yet?</string>
    <string name="login_question">Already registered? Sign in</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_clear_fields">Clear Fields!</string>

    <string name="required_field_err">This field is required</string>
    <string name="invalid_firstName">First Name can only contain alphabets</string>
    <string name="invalid_lastName">Last Name can only contain alphabets</string>
    <string name="invalid_email">Please enter valid email</string>
    <string name="invalid_tripperName">TripperName can only contain numbers, alphabets and _</string>
    <string name="invalid_tripperName_length">TripperName must be >3 characters</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_password_length">Password must be >5 characters</string>
    <string name="confirm_password_err">Passwords do not match</string>
    <string name="wrong_password">You have entered wrong password</string>
    <string name="login_failed">Login failed</string>
    <string name="login_success">Login successful</string>
    <string name="registration_success">Congrats! Your registration is successful</string>

    <string name="welcome">"Welcome !"</string>
    <string name="title_activity_tripper">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>